2002-01-24  Mark McLoughlin  <mark@skynet.ie>

	* gtk/gtkaccessible.h: include gtk/gtkwidget.h

Wed Jan 23 20:28:59 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtknotebook.c (gtk_notebook_draw_arrow): 
	Use insensitive state for insensitive arrows, not
	just an "etched state". (#67172, Adrian Custer)

2002-01-23  Manish Singh  <yosh@gimp.org>

	* gtk/gtkentry.c (gtk_entry_set_text): use a variable that's actually
	been declared.

2002-01-23  Damon Chaplin  <damon@ximian.com>

	* configure.in (gtk_doc_min_version): set minimum gtk-doc version to
	0.9, since we need to use the new --type-init-func argument for
	gtkdoc-scangobj.

2002-01-23  Matthias Clasen  <matthiasc@poet.de>

	* gtk/gtkentry.c, gtk/gtkwidget.c: Remove excessive
	g_return_if_fail() calls. (#57615)

	* gtk/gtkitemfactory.c (gtk_item_factory_delete_entries): Make
	it work for paths with underline accelerators. (#69247)

Wed Jan 23 15:12:16 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkspinbutton.c (gtk_spin_button_state_changed): 
	Stop spinning if widget becomes insensitive. (#56248)

Wed Jan 23 14:44:12 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkspinbutton.c (EPSILON): Decreate value since
	we now use doubles.

Tue Jan 22 16:58:37 2002  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtktreeview.c (gtk_tree_view_size_allocate): Fix sizing bug
	I introduced accidentally, #69358

2002-01-22 Padraig O'Briain <padraig.obriain@sun.com>

	* gtk/gtktreestore.c (gtk_tree_store_iter_children):
	Update last change to prevent core dump

Mon Jan 21 01:21:54 2002  Kristian Rietveld  <kris@gtk.org>

	* gtk/gtktreestore.c: add some more stamp checks (pointed out
	by Anders Carlsson)

	* gtk/gtktreemodelsort.c (gtk_tree_model_sort_insert_value): don't
	assume _row_changed will insert sort (because _row_changed doesn't
	need to follow this signal), so apply insert sort here
	(gtk_tree_model_sort_level_find_insert): header doesn't need to be
	set here, so use a return instead of g_return_val_if_fail.
